# ACTIVIDAD_CC232

./: .gitignore  Ejercicio2-P3.md  PARCIAL.md
PC2/: CMakeLists.txt
PC2/demos/: demo_merge.cpp
PC2/docs/: teoricas.md
PC2/include/: MergeKLists.h
PC2/video/: Video.md
PC3/: .gitignore  CMakeLists.txt  README.md
PC3/demos/: traza_reto.cpp
PC3/docs/: bitacora.md  respuestas_obligatorias.md
PC3/include/: LazyHeap.h  XorManager.h
PC3/include/Semana5/: BinNode.h  BinarySearchTree.h  BinaryTree.h
PC3/resultados/: casos_borde.txt  ejecucion_pc3.txt  tests_pc3.txt
PC3/src/: XorManager.cpp
PC3/tests/: main.cpp
PC3/video/: Link.md
Semana2/: actividad2_semana2.md
Semana3/: Actividad3-CC232.md
Semana3/PC2/: CMakeLists.txt  README.md
Semana3/PC2/benchmark/: benchmark_merge.cpp
Semana3/PC2/demos/: demo_merge.cpp
Semana3/PC2/include/: MergeKLists.h
Semana3/PC2/resultados/: Analisis.md
Semana3/PC2/src/: src.md
Semana3/PC2/tests/: main.cpp
Semana4/: Actividad4-CC232.md
Semana5/: Actividad5-CC232.md
Semana6/: Actividad6-CC232.md
